# crpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
a2a_sdl/: __init__.py  audit.py  cli.py  codec.py  conformance.py  constants.py  envelope.py  handlers.py  policy.py  replay.py  schema.py  security.py  session.py  swarm.py  transport_http.py  transport_ipc.py  transport_ws.py  utils.py  versioning.py
a2a_sdl/examples/: task_min_payload.json  toolcall_payload.json
docs/: protocol-v1.md  versioning-policy.md
tests/: test_audit.py  test_cli.py  test_codec.py  test_conformance.py  test_envelope.py  test_handlers.py  test_helpers.py  test_http.py  test_http_admin.py  test_ipc.py  test_policy.py  test_replay_store.py  test_schema.py  test_security.py  test_session.py  test_stress_fuzz.py  test_swarm.py  test_versioning.py  test_ws.py
