[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-sdl"
version = "0.1.0"
description = "A2A-SDL: agent-to-agent self-describing protocol reference implementation"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = [
  "cryptography>=42.0.0"
]

[project.optional-dependencies]
cbor = ["cbor2>=5.6.5"]
schema = ["jsonschema>=4.23.0"]
http = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "httpx>=0.27.0"]
ws = ["websockets>=12.0"]
full = [
  "cbor2>=5.6.5",
  "jsonschema>=4.23.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "websockets>=12.0"
]

[project.scripts]
a2a = "a2a_sdl.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["a2a_sdl*"]

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
